--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -5,30 +5,43 @@
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
     android:layout_marginTop="4dp"
+    android:background="@color/cardview_dark_background"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?selectableItemBackground">
 
+
     <LinearLayout
+        android:id="@+id/parent_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:elevation="8dp"
+        android:orientation="vertical"
+        android:padding="8dp">
 
-        <!--suppress AndroidLintContentDescription -->
+        <!--suppress AndroidLintContentDescription-->
         <!--<com.example.xyzreader.ui.DynamicHeightNetworkImageView-->
         <!--android:id="@+id/thumbnail"-->
         <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_height="300dp"-->
         <!--android:background="@color/photo_placeholder" />-->
-
+        <!---->
         <ImageView
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             android:background="@color/photo_placeholder"
             android:scaleType="centerCrop" />
 
-        <TextView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@color/ltgray"
+            android:elevation="16dp"
+            android:orientation="vertical">
+
+            <TextView
             android:id="@+id/article_title"
             style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="match_parent"
@@ -39,7 +52,8 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingTop="16dp"
-            android:textColor="@android:color/background_dark" />
+                android:textColor="@android:color/background_dark"
+                android:textSize="24sp" />
 
         <TextView
             android:id="@+id/article_subtitle"
@@ -52,7 +66,10 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:singleLine="true"
-            android:textColor="#6000" />
+            android:textColor="#6000"
+            android:textSize="16sp" />
+
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
